update to kicad 8

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,19 @@
-name: Kibot
+name: Kibot build
 
 on:
   push:
 
 jobs:
-  kibot:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
 
-    - uses: INTI-CMNB/KiBot@v2_k7
+    - uses: INTI-CMNB/KiBot@v2_k8
       with:
-        config: kibot_config.yml
+        config: kibot_build.yml
         dir: kibot_outputs
         schema: 'kicad/riotee-sensor-shield.kicad_sch'
         board: 'kicad/riotee-sensor-shield.kicad_pcb'
